--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
-<h1>Carbon Capture to Methanol</h1>
-<h2>Storing extra summer sun for winter</h2>
+20210426 hope to provide resources about me
+http://xenon.stanford.edu/~ksykang/
 
-It would likely be more efficient to grow seaweed in the open ocean and digest it to alcohol. But we have extra solar energy in summer before the fire seasons.
-
-<h2>Estimate Efficiency</h2>
-
-The ETH Zurich solar methanol project once said its 6x the price of current methanol.
-
-<h2>General Approach</h2>
-
-We'd use a hobby-like approach. We'd use NaOH(aq) to absorb CO2. An electric pressure washer and electrolysis will create syngas. Some copper and heat should be able to make methanol.
-
+<p>Rather than blog https://softwareandcarboncapture.wordpress.com, a more wiki-like site may be better
+for Carbon Capture to Methanol https://co2-ch3oh.pages.dev/
