cleanup duplicate ranges

--- a/unicode/check.html
+++ b/unicode/check.html
@@ -12,7 +12,6 @@ var ranges = {
 0x02B0:"Spacing Modifier Letters",
 0x0300:"Combining Diacritical Marks",
 0x0370:"Greek",
-//0x03E2:"Coptic in Greek block",
 0x0400:"Cyrillic",
 0x0500:"Cyrillic Supplement",
 0x0530:"Armenian",
@@ -78,21 +77,16 @@ var ranges = {
 0x1F00:"Greek Extended",
 0x2000:"General Punctuation",
 0x2000:"Layout Controls",
-//0x2061:"Invisible Operators",
-//0x2061:"Invisible Operators",
 0x2070:"Super and Subscripts",
 0x2070:"Superscripts and Subscripts",
 0x20A0:"Currency Symbols",
-//0x20AC:"Euro Sign",
 0x20D0:"Combining Diacritical Marks for Symbols",
 0x2100:"Additional Squared Symbols",
-0x2100:"Letterlike Symbols",
 0x2100:"Letterlike Symbols",
 0x2150:"Number Forms",
 0x2190:"Arrows",
 0x2200:"Mathematical Operators",
 0x2300:"Miscellaneous Technical",
-//0x2308:"Floors and Ceilings",
 0x2330:"0x6 APL symbols",
 0x2400:"Control Pictures",
 0x2440:"Optical Character Recognition (OCR)",
@@ -101,10 +95,7 @@ var ranges = {
 0x2580:"Block Elements",
 0x25A0:"Geometric Shapes",
 0x2600:"Miscellaneous Symbols",
-//0x2616:"Japanese Chess",
-//0x2654:"Chess, Checkers/Draughts",
 0x2660:"Card suits",
-//0x268A:"Yijing Mono-, Di- and Trigrams",
 0x2700:"Dingbats",
 0x27C0:"Miscellaneous Mathematical Symbols-A",
 0x27F0:"Supplemental Arrows-A",
@@ -112,9 +103,7 @@ var ranges = {
 0x2900:"Supplemental Arrows-B",
 0x2980:"Miscellaneous Mathematical Symbols-B",
 0x2A00:"Supplemental Mathematical Operators",
-0x2B00:"Additional Arrows",
 0x2B00:"Additional Shapes",
-0x2B00:"Miscellaneous Symbols and Arrows",
 0x2B00:"Miscellaneous Symbols and Arrows",
 0x2C00:"Glagolitic",
 0x2C60:"Latin Extended-C",
@@ -169,14 +158,10 @@ var ranges = {
 0xABC0:"Meetei Mayek",
 0xAC00:"Hangul Syllables",
 0xD7B0:"Hangul Jamo Extended-B",
-//0xD800:"High Surrogates",
-//0xDC00:"Low Surrogates",
 0xE000:"Private Use Area",
 0xF900:"CJK Compatibility Ideographs",
 0xFB00:"Alphabetic Presentation Forms",
 0xFB00:"Latin Ligatures",
-//0xFB13:"Armenian Ligatures",
-//0xFB1D:"Hebrew Presentation Forms",
 0xFB50:"Arabic Presentation Forms-A",
 0xFB50:"Rial Sign",
 0xFDD0:"Range in Arabic Presentation Forms-A",
@@ -188,10 +173,7 @@ var ranges = {
 0xFE70:"Arabic Presentation Forms-B",
 0xFF00:"Fullwidth Latin Letters",
 0xFF00:"Halfwidth and Fullwidth Forms",
-0xFF00:"Halfwidth and Fullwidth Forms",
-//0xFF04:"Fullwidth Currency Symbols",
 0xFF10:"Fullwidth ASCII Digits",
-//0xFF65:"Halfwidth Katakana",
 0xFFA0:"Halfwidth Jamo",
 0xFFF0:"Specials",
 0x10000:"Linear B Syllabary",
@@ -202,7 +184,6 @@ var ranges = {
 0x101D0:"Phaistos Disc",
 0x10280:"Lycian",
 0x102A0:"Carian",
-0x102E0:"Coptic Epact Numbers",
 0x102E0:"Coptic Epact Numbers",
 0x10300:"Old Italic",
 0x10330:"Gothic",
@@ -218,7 +199,7 @@ var ranges = {
 0x10600:"Linear A",
 0x10800:"Cypriot Syllabary",
 0x10840:"Aramaic, Imperial",
-0x10860:" Palmyrene",
+0x10860:"Palmyrene",
 0x10880:"Nabataean",
 0x108E0:"Hatran",
 0x10900:"Phoenician",
@@ -230,9 +211,9 @@ var ranges = {
 0x10A80:"Old North Arabian",
 0x10AC0:"Manichaean",
 0x10B00:"Avestan",
-0x10B40:" Parthian, Inscriptional",
-0x10B60:" Pahlavi, Inscriptional",
-0x10B80:" Pahlavi, Psalter",
+0x10B40:"Parthian, Inscriptional",
+0x10B60:"Pahlavi, Inscriptional",
+0x10B80:"Pahlavi, Psalter",
 0x10C00:"Old Turkic",
 0x10C80:"Old Hungarian",
 0x10D00:"Hanifi Rohingya",
@@ -248,7 +229,6 @@ var ranges = {
 0x11100:"Chakma",
 0x11150:"Mahajani",
 0x11180:"Sharada",
-0x111E0:"Sinhala Archaic Numbers",
 0x111E0:"Sinhala Archaic Numbers",
 0x11200:"Khojki",
 0x11280:"Multani",
@@ -276,7 +256,6 @@ var ranges = {
 0x11FB0:"Lisu Supplement",
 0x11FC0:"Tamil Supplement",
 0x12000:"Cuneiform",
-0x12400:"Cuneiform Numbers and Punctuation",
 0x12400:"Cuneiform Numbers and Punctuation",
 0x12480:"Early Dynastic Cuneiform",
 0x13000:"Egyptian Hieroglyphs",
@@ -306,7 +285,6 @@ var ranges = {
 0x1D300:"Tai Xuan Jing Symbols",
 0x1D360:"Counting Rod Numerals",
 0x1D400:"Mathematical Alphanumeric Symbols",
-0x1D400:"Mathematical Alphanumeric Symbols",
 0x1D800:"Sutton SignWriting",
 0x1E000:"Glagolitic Supplement",
 0x1E100:"Nyiakeng Puachue Hmong",
@@ -315,7 +293,6 @@ var ranges = {
 0x1E900:"Adlam",
 0x1EC70:"Indic Siyaq Numbers",
 0x1ED00:"Ottoman Siyaq Numbers",
-0x1EE00:"Arabic Mathematical Alphabetic Symbols",
 0x1EE00:"Arabic Mathematical Alphabetic Symbols",
 0x1F000:"Mahjong Tiles",
 0x1F030:"Domino Tiles",
@@ -374,6 +351,8 @@ function mkCheck() {
 <div id=unicode>placeholder</div>
 
 <p>I think this information is basic fact and cannot be copyrighted. I
-put this in public domain.
+put this page's code in public domain. This information enables 
+interoperability
+which may be fair use.
 </body>
 </html>
