edits for ranges that start non-printable

--- a/unicode.html
+++ b/unicode.html
@@ -371,9 +371,8 @@ function mkRow(startPt) {
 
 <div id=unicode>placeholder</div>
 
-<p>I think this information is basic fact and cannot be copyrighted. I 
-place this page's code in public domain. This information may help 
-interoperability
-which may be fair use.
+<p>
+I place this page's code in public domain. This information may help 
+interoperability which may be fair use.
 </body>
 </html>
