--- a/unicode/check.html
+++ b/unicode/check.html
@@ -350,6 +350,7 @@ function mkCheck() {
 and code. There are about 300-ish unicode ranges as of August 2021.
 This tries to render them and has a sample image to compare. Note,
 there can be signficant font variations in how the character appears.
+Some ranges do not have sample images.
 
 <p>Some ranges start with non-printable characters, so the range is
 shifted to a printable row. In that case, the link to the official
