--- a/unicode/check.html
+++ b/unicode/check.html
@@ -364,6 +364,10 @@ ancient characters and scripts. Those who need those writing systems
 will likely need more verification and control than web systems that 
 could silently revise, upgrade, and change.
 
+<p>For Americans, the ASCII range--represented as 0x30 below--and the 
+0x1f600 emoticons--outside the 16-bit basic multilingual plane (BMP)--will 
+be common. There are also some in 0x2600 Miscellaneous Symbols.
+
 <div id=unicode>placeholder</div>
 
 <p>
