--- a/unicode/check.html
+++ b/unicode/check.html
@@ -366,7 +366,8 @@ could silently revise, upgrade, and change.
 
 <p>For Americans, the ASCII range--represented as 0x30 below--and the 
 0x1f600 emoticons--outside the 16-bit basic multilingual plane (BMP)--will 
-be common. There are also some in 0x2600 Miscellaneous Symbols.
+be common. There are also some in 0x2600 Miscellaneous Symbols. Skin
+color modifiers 0x1f3fb-0x1f3ff are strongly encouraged.
 
 <div id=unicode>placeholder</div>
 
