--- a/unicode/check.html
+++ b/unicode/check.html
@@ -86,7 +86,6 @@ var ranges = {
 0x2190:"Arrows",
 0x2200:"Mathematical Operators",
 0x2300:"Miscellaneous Technical",
-0x2330:"0x6 APL symbols",
 0x2400:"Control Pictures",
 0x2440:"Optical Character Recognition (OCR)",
 0x2460:"Enclosed Alphanumerics",
@@ -128,7 +127,7 @@ var ranges = {
 0x3300:"CJK Compatibility",
 0x3400:"CJK  Extension&nbsp;A",
 0x4DC0:"Yijing Hexagram Symbols",
-0x4E00:"CJK Unified Ideographs (Han)",
+0x4E00:"35mb CJK Unified Ideographs (Han)",
 0xA000:"Yi Syllables",
 0xA490:"Yi Radicals",
 0xA4D0:"Lisu",
@@ -305,7 +304,7 @@ var ranges = {
 0x1FA00:"Chess Symbols",
 0x1FA70:"Symbols and Pictographs Extended-A",
 0x1FB00:"Symbols for Legacy Computing",
-0x20000:"CJK Extension&nbsp;B",
+0x20000:"40mb CJK Extension&nbsp;B",
 0x2A700:"CJK Extension&nbsp;C",
 0x2B740:"CJK Extension&nbsp;D",
 0x2B820:"CJK Extension&nbsp;E",
@@ -355,7 +354,8 @@ Some ranges do not have sample images.
 <p>Some ranges start with non-printable characters, so the range is
 shifted to a printable row. In that case, the link to the official
 unicode chart will be broken, and the name of the range has the real
-starting hex code point prepended.
+starting hex code point prepended. A couple charts are large--35mb CJK 
+Unified.. and 40mb CJK Ext. B.
 
 <p>As noted in the <a href=https://en.wikipedia.org/wiki/Tags_(Unicode_block)>
 wikipedia page about unicode tags</a>, there are various recommendations
